<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/Phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:onClick="call"
        android:text="@string/btn_call"
        app:backgroundTint="#DF0E0E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/SMS"
        android:layout_width="81dp"
        android:layout_height="45dp"
        android:layout_marginStart="220dp"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="68dp"
        android:onClick="text"
        android:text="@string/btn_sms"
        app:backgroundTint="#DF0E0E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Phone" />

    <Button
        android:id="@+id/Map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="80dp"
        android:onClick="location"
        android:text="@string/birthplace"
        app:backgroundTint="#DF0E0E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SMS" />

    <Button
        android:id="@+id/Website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openwebsite"
        android:text="@string/btn_website"
        app:backgroundTint="#DF0E0E"
        app:layout_constraintBottom_toTopOf="@+id/Share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.841"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Map"
        app:layout_constraintVertical_bias="0.474" />

    <Button
        android:id="@+id/Share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="180dp"
        android:onClick="share"
        android:text="@string/btn_share"
        app:backgroundTint="#DF0E0E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Map" />

    <Button
        android:id="@+id/btn_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="newactivity"
        android:text="@string/txt_activity"
        app:backgroundTint="#DF0E0E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Share"
        app:layout_constraintTop_toBottomOf="@+id/Website" />
</androidx.constraintlayout.widget.ConstraintLayout>